--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,10 @@
 {
   "meta": {
-    "username": "put your username here",
-    "repositoryName": "put your repository name here",
+    "username": "quinez",
+    "repositoryName": "trashff.io",
     "branch": "gh-pages"
   },
   "theme": {
-    "name": "Casper"
+    "name": "ichi"
   }
 }
