--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "quinez",
-    "repositoryName": "trashff.io",
+    "repositoryName": "trashff",
     "branch": "gh-pages"
   },
   "theme": {
