--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
   },
   "site": {
     "title": "Trash FF",
-    "description": "Trash fanfiction/stories writen by almost literal trash",
+    "description": "Trash fanfiction/stories written by almost literal trash",
     "logo": "http://img08.deviantart.net/c652/i/2012/148/b/c/black_and_white_fire_2_by_stubert21-d51dxw9.jpg",
     "cover": "http://more-sky.com/data/out/8/IMG_228395.jpg",
     "postsPerPage": "10",
