Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -7,8 +7,8 @@
   "site": {
     "title": "Trash FF",
     "description": "Trash fanfiction/stories written by almost literal trash",
-    "logo": "http://more-sky.com/data/out/8/IMG_228395.jpg",
-    "cover": "http://img08.deviantart.net/c652/i/2012/148/b/c/black_and_white_fire_2_by_stubert21-d51dxw9.jpg",
+    "logo": "http://www.thebluelizardlounge.com/Laughingbird%20Documents/Logo%20Libraries/Logo%20Templates/DevJakCody/Creative%20Pak%20Elements--fire-orb.png",
+    "cover": "http://img11.deviantart.net/e74f/i/2011/249/0/d/xp_bliss___night_version_by_satoukenta-d4913fu.jpg",
     "postsPerPage": "10",
     "googleAnalytics": "",
     "disqus": "trashff"
